Fixed alignment of  notification buttons for user

--- a/frontend/src/components/MeetingView/AgendaView/AgendaItem.scss
+++ b/frontend/src/components/MeetingView/AgendaView/AgendaItem.scss
@@ -255,6 +255,7 @@
   .item-links {
     display: flex;
     justify-content: space-between;
+    justify-items: flex-end;
   }
   .link:not(:first-child) {
     margin-left: unset;
